# uptktest

./: CMakeLists.txt  README.md  cublas.json  cuda.json  cufft.json  driver.json  fix_summary.md  learnings.md  nccl.json  progress.txt  rand.json  rtc.json  sparse.json  summary.md  test.py
cublas_test/: CMakeLists.txt
cublas_test/test/: a  test_cublasAxpyEx.cpp  test_cublasCaxpy_v2.cpp  test_cublasCcopy_v2.cpp  test_cublasCdgmm.cpp  test_cublasCdotc_v2.cpp  test_cublasCdotu_v2.cpp  test_cublasCgbmv_v2.cpp  test_cublasCgeam.cpp  test_cublasCgemm3m.cpp  test_cublasCgemm3mStridedBatched.cpp  test_cublasCgemmEx.cpp  test_cublasCgemmStridedBatched.cpp  test_cublasCgemm_v2.cpp  test_cublasCgemvStridedBatched.cpp  test_cublasCgemv_v2.cpp  test_cublasCgerc_v2.cpp  test_cublasCgeru_v2.cpp  test_cublasChbmv_v2.cpp  test_cublasChemm_v2.cpp  test_cublasChemv_v2.cpp  test_cublasCher2_v2.cpp  test_cublasCher2k_v2.cpp  test_cublasCher_v2.cpp  test_cublasCherk3mEx.cpp  test_cublasCherkEx.cpp  test_cublasCherk_v2.cpp  test_cublasCherkx.cpp  test_cublasChpmv_v2.cpp  test_cublasChpr2_v2.cpp  test_cublasChpr_v2.cpp  test_cublasCreate_v2.cpp  test_cublasCrot_v2.cpp  test_cublasCrotg_v2.cpp  test_cublasCscal_v2.cpp  test_cublasCsrot_v2.cpp  test_cublasCsscal_v2.cpp  test_cublasCswap_v2.cpp  test_cublasCsymm_v2.cpp  test_cublasCsymv_v2.cpp  (+251 more)
cuda_test/: CMakeLists.txt
cuda_test/test/: a  test___cudaPopCallConfiguration.cpp  test___cudaPushCallConfiguration.cpp  test___cudaRegisterFatBinary.cpp  test___cudaRegisterFunction.cpp  test___cudaRegisterManagedVar.cpp  test___cudaRegisterSurface.cpp  test___cudaRegisterTexture.cpp  test___cudaRegisterVar.cpp  test___cudaUnregisterFatBinary.cpp  test_cudaArrayGetInfo.cpp  test_cudaArrayGetMemoryRequirements.cpp  test_cudaBindSurfaceToArray.cpp  test_cudaBindTexture.cu  test_cudaBindTexture2D.cu  test_cudaBindTextureToArray.cu  test_cudaBindTextureToMipmappedArray.cu  test_cudaChooseDevice.cpp  test_cudaCreateChannelDesc.cpp  test_cudaCreateSurfaceObject.cpp  test_cudaCreateTextureObject.cpp  test_cudaDestroyExternalMemory.cpp  test_cudaDestroyExternalSemaphore.cpp  test_cudaDestroySurfaceObject.cpp  test_cudaDestroyTextureObject.cpp  test_cudaDeviceCanAccessPeer.cpp  test_cudaDeviceDisablePeerAccess.cpp  test_cudaDeviceEnablePeerAccess.cpp  test_cudaDeviceGetAttribute.cpp  test_cudaDeviceGetByPCIBusId.cpp  test_cudaDeviceGetCacheConfig.cpp  test_cudaDeviceGetDefaultMemPool.cpp  test_cudaDeviceGetGraphMemAttribute.cpp  test_cudaDeviceGetLimit.cpp  test_cudaDeviceGetMemPool.cpp  test_cudaDeviceGetP2PAttribute.cpp  test_cudaDeviceGetPCIBusId.cpp  test_cudaDeviceGetSharedMemConfig.cpp  test_cudaDeviceGetStreamPriorityRange.cpp  test_cudaDeviceGraphMemTrim.cpp  (+306 more)
driver_test/: CMakeLists.txt  driver_smoke_decls.h  driver_smoke_types.h  generate_driver_tests.ps1
driver_test/test/: test_UPArray3DCreate.cpp  test_UPArray3DGetDescriptor.cpp  test_UPArrayCreate.cpp  test_UPArrayDestroy.cpp  test_UPArrayGetDescriptor.cpp  test_UPArrayGetMemoryRequirements.cpp  test_UPArrayGetPlane.cpp  test_UPArrayGetSparseProperties.cpp  test_UPCtxAttach.cpp  test_UPCtxCreate.cpp  test_UPCtxCreate_v3.cpp  test_UPCtxDestroy.cpp  test_UPCtxDetach.cpp  test_UPCtxDisablePeerAccess.cpp  test_UPCtxEnablePeerAccess.cpp  test_UPCtxGetApiVersion.cpp  test_UPCtxGetCacheConfig.cpp  test_UPCtxGetCurrent.cpp  test_UPCtxGetDevice.cpp  test_UPCtxGetExecAffinity.cpp  test_UPCtxGetFlags.cpp  test_UPCtxGetLimit.cpp  test_UPCtxGetSharedMemConfig.cpp  test_UPCtxGetStreamPriorityRange.cpp  test_UPCtxPopCurrent.cpp  test_UPCtxPushCurrent.cpp  test_UPCtxResetPersistingL2Cache.cpp  test_UPCtxSetCacheConfig.cpp  test_UPCtxSetCurrent.cpp  test_UPCtxSetLimit.cpp  test_UPCtxSetSharedMemConfig.cpp  test_UPCtxSynchronize.cpp  test_UPDestroyExternalMemory.cpp  test_UPDestroyExternalSemaphore.cpp  test_UPDeviceCanAccessPeer.cpp  test_UPDeviceComputeCapability.cpp  test_UPDeviceGet.cpp  test_UPDeviceGetAttribute.cppbak  test_UPDeviceGetByPCIBusId.cpp  test_UPDeviceGetCount.cpp  (+404 more)
rand_test/: CMakeLists.txt  generate_rand_tests.ps1
rand_test/test/: test_UPTKrandCreateGenerator.cpp  test_UPTKrandCreateGeneratorHost.cpp  test_UPTKrandCreatePoissonDistribution.cpp  test_UPTKrandDestroyDistribution.cpp  test_UPTKrandDestroyGenerator.cpp  test_UPTKrandGenerate.cpp  test_UPTKrandGenerateLogNormal.cpp  test_UPTKrandGenerateLogNormalDouble.cpp  test_UPTKrandGenerateLongLong.cpp  test_UPTKrandGenerateNormal.cpp  test_UPTKrandGenerateNormalDouble.cpp  test_UPTKrandGeneratePoisson.cpp  test_UPTKrandGeneratePoissonMethod.cpp  test_UPTKrandGenerateSeeds.cpp  test_UPTKrandGenerateUniform.cpp  test_UPTKrandGenerateUniformDouble.cpp  test_UPTKrandGetDirectionVectors32.cpp  test_UPTKrandGetDirectionVectors64.cpp  test_UPTKrandGetProperty.cpp  test_UPTKrandGetScrambleConstants32.cpp  test_UPTKrandGetScrambleConstants64.cpp  test_UPTKrandGetVersion.cpp  test_UPTKrandSetGeneratorOffset.cpp  test_UPTKrandSetGeneratorOrdering.cpp  test_UPTKrandSetPseudoRandomGeneratorSeed.cpp  test_UPTKrandSetQuasiRandomGeneratorDimensions.cpp  test_UPTKrandSetStream.cpp
src/cub/cub/: CMakeLists.txt  bfloat16.hpp  common_test_header.hpp  half.hpp  test_hipcub_basic.cpp  test_hipcub_block_adjacent_difference.cpp  test_hipcub_block_discontinuity.cpp  test_hipcub_grid.cpp  (+40 more)
src/thrust/: CMakeLists.txt  test_adjacent_difference.cpp  test_allocator_aware_policies.cpp  test_async_reduce.cpp  test_async_transform.cpp  test_binary_search.cpp  test_binary_search_vector.cpp  test_copy.cpp  test_dereference.cpp  test_device_ptr.cpp  test_fill.cpp  test_find.cpp  test_for_each.cpp  test_header.hpp  test_memory.cpp  test_merge.cpp  test_merge_by_key.cpp  test_parallel_for.cpp  test_partition.cpp  test_reduce.cpp  test_reduce_by_key.cpp  test_remove.cpp  test_replace.cpp  test_scan.cpp  test_scan_by_key.cpp  test_seed.hpp  test_sort.cpp  test_sort_by_key.cpp  test_stable_sort.cpp  test_stable_sort_by_key.cpp  test_transform.cpp  test_tuple.cpp  test_uninitialized_copy.cpp  test_uninitialized_fill.cpp  test_unique.cpp  test_unique_by_key.cpp  test_zip_iterator_scan.cpp
(+1220 files in other folders)
